      operators this allows removing large contiugous outliers in your
      final stacked datasets.

    - siglclip-maskfilled: similar to 'madclip-maskfilled', but defining
      outliers by Sigma-clipping.

    - free: free (from memory) the top operand on the stack of
      operands. This is useful in combination with operators that produce
      more than one output operand.

*** astscript-fits-view
  --globalhdu: use the same HDU in any number of input files (with the
    short format of '-g'); similar to the same option in Arithmetic or
    ConvertType.

  - The default DS9 'sls' colormap contrast and bias are adjusted so the
    largest value does not have a white color, but is dark red. This was
    done because white is DS9's default color for blank pixels and
    out-of-image regions; making the pixels with the largest value
    invisible.

*** astscript-psf-scale-factor
  --nocentering: disable sub-pixel centering of the desired star before
    finding the scale factor; added by Sepideh Eskandarlou and Raul
    Infante-Sainz.

*** Makefile extensions
  - $(ast-text-prev TARGET, LIST): select the word that is previous to
    'TARGET' in a list of words. See the minimal working example in the
    book for more.

  - $(ast-text-prev-batch TARGET, NUM, LIST): select the previous "batch"
    of 'NUM' words (in relation to the batch that contains 'TARGET'). This
    is useful for steps in your pipelines were you need to limit the
    parallelization to batches. See the minimal working example in the book
    for more.

  - $(ast-text-prev-batch-by-ram TARGET, NEEDED_RAM_GB, LIST): select the
    previous batch of words in 'LIST' such that the total consumed RAM by
    all the parallel executions does not exceed the available RAM when Make
    starts. Like 'ast-text-prev-batch', this is useful for steps in a
    pipeline that require a large amount of RAM (thus not allowing parallel
    execution), but this is more generic and adapts to different systems